--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ header {
     font-family: helvetica, arial, sans-serif;
 }
 
+.hero,
+main,
+footer {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .header_top {
     background-color: #000;
 }
@@ -30,4 +36,17 @@ header {
     display: flex;
     align-items: flex-end;
     background-color: rgba(0, 0, 0, 0.1);
+}
+
+/* MAIN */
+
+/* GAME LIST */
+.game_list img {
+    width: 100%;
+    border-radius: 15px;
+    padding: 2px;
+}
+
+.game_list img:hover {
+    border: 2px solid blue;
 }
