--- a/style.css
+++ b/style.css
@@ -118,3 +118,13 @@ footer {
 .explore_ps4 img {
     width: 100%;
 }
+
+/* PLAYSTATION PLUS */
+
+.ps_plus {
+    background-color: #bfb9b9;
+}
+
+.ps_plus img {
+    width: 100%;
+}
